# verus

./: .gitignore  Dockerfile  README.md  build-locally.sh  build-with-docker.sh
ruby-server/: Gemfile  server.rb
verus-gem/: Gemfile  verus.gemspec
verus-gem/lib/: verus-gem.rb
verus-ruby-wrappers/: Cargo.toml
verus-ruby-wrappers/src/: lib.rs
verus-validations/: Cargo.toml
verus-validations/src/: lib.rs
verus-wasm/: Cargo.toml  LICENSE_MIT
verus-wasm/src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
