[package]
name = "verus-ruby-wrappers"
version = "0.1.0"
authors = ["Ethan Kent <ekent@jd11.law.harvard.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verus-validations = { path = "../verus-validations" }
libc = "0.2.71"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin14-clang"
ar = "x86_64-apple-darwin14-ar"

[lib]
crate-type = ["dylib", "rlib"]